--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite + Lit + TS</title>
-        <link rel="stylesheet" href="./src/config/styles/reset.scss" />
-        <link rel="stylesheet" href="./src/config/styles/variables.scss" />
-        <link rel="stylesheet" href="./src/config/styles/global.scss" />
-        <script type="module" src="/src/my-element.ts"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+
+        <link rel="stylesheet" href="./src/styles/index.scss" />
+
+        <script type="module" src="/src/containers/todo-app.ts"></script>
+        <script type="module" src="/src/components/app-paper/index.ts"></script>
     </head>
     <body>
-        <my-element>
-            <h1>Vite + Lit</h1>
-        </my-element>
+        <todo-app></todo-app>
     </body>
 </html>
