[app-paper] finish component

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         <script type="module" src="/src/containers/todo-app.ts"></script>
         <script type="module" src="/src/components/app-paper/index.ts"></script>
+        <script type="module" src="/src/components/app-input/index.ts"></script>
     </head>
     <body>
         <todo-app></todo-app>
