--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <script type="module" src="/src/containers/todo-app.ts"></script>
         <script type="module" src="/src/components/app-paper/index.ts"></script>
         <script type="module" src="/src/components/app-input/index.ts"></script>
+        <script
+            type="module"
+            src="/src/components/app-checkbox/index.ts"
+        ></script>
     </head>
     <body>
         <todo-app></todo-app>
