--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             type="module"
             src="/src/components/app-checkbox/index.ts"
         ></script>
+        <script type="module" src="/src/components/app-todo/index.ts"></script>
     </head>
     <body>
         <todo-app></todo-app>
